--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,8 +5,8 @@ version: 3.0.2
 homepage: https://developer.huawei.com/consumer/en/agconnect/
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
-  flutter: ">=1.12.13+hotfix.6"
+  sdk: '>=2.18.1 <3.0.0'
+  flutter: ">=2.5.0"
 
 dependencies:
   flutter:
